simulation tests and PC fix.new popup menu in the treepanel)

--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -25,6 +25,7 @@ s_MENU_EPI_NEW = New
 s_MENU_EPI_EDIT = Edit
 s_MENU_EPI_DEL = Delete
 s_MENU_EPI_CLONE = Clone
+s_MENU_EPI_TEXTVIEW	 = Edit as text
 
 # Help Menu
 s_MENU_HELP = Help
@@ -58,9 +59,11 @@ s_MENU_WINDOW_O_ACTIVE = Others than active
 s_MENU_WINDOW_SEL_EPI = Selected epithelium model tabs
 s_MENU_WINDOW_O_SEL_EPI = Other epithelium model tabs
 
+# EpiTree leaf Menu
+s_MENU_EPITREE_EDIT_BY_TEXT = Edit as text format
+
 # org.epilogtool.io
 s_SBML_failed_load = could not find SBML file.
-
 
 # org.epilogtool.Launcher
 s_CMD_NOGUI = Command line EpiLog needs valid: PEPS file --file and max number of iterations --max-iter
