added edit by text dialog

--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -2,6 +2,9 @@
 s_OK = OK
 s_CANCEL = Cancel
 s_ACCEPT = Accept
+s_APPLYANDCLOSE = Apply and close
+s_SAVEAS = Save as
+s_LOADFROM = Load file
 s_RESET = Reset
 
 # Dialogs
