missing notify change

--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -7,10 +7,20 @@ s_SAVEAS = Save as
 s_LOADFROM = Load file
 s_RESET = Reset
 
+
 # Dialogs
 s_QUESTION = Question
 s_WARNING = Warning
 s_MODEL_SELECT = Model selection
+
+# Help Dialog
+# GENERAL
+s_HELP_PARSING = 
+# PARSING
+
+s_EPIUPDATING_HELP_PARSING = TEST EPIUP
+s_PRIORITIES_HELP_PARSING = TEST PC
+s_INTEGRATION_HELP_PARSING = TEST IT
 
 # File Menu
 s_MENU_FILE = File
