GUI dialog and track phenos

--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -151,6 +151,7 @@ s_TAB_PERTURBATIONS = Perturbations
 s_TAB_PRIORITIES = Cellular model update
 s_TAB_EPIUPDATING = Epithelium model update
 s_TAB_CELLDIVISION = Cell division
+s_TAB_SELECTPHENOTYPE = Track phenotypes
 s_TOOL_SIMULATION = Simulation
 s_TOOL_MONTECARLO = Monte carlo
 
