--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -21,6 +21,8 @@ s_HELP_PARSING =
 s_EPIUPDATING_HELP_PARSING = TEST EPIUP
 s_PRIORITIES_HELP_PARSING = TEST PC
 s_INTEGRATION_HELP_PARSING = TEST IT
+s_PHENOTYPES_HELP_PARSING = TEST PHENO
+
 
 # File Menu
 s_MENU_FILE = File
