apply chamge button workking, panel revalidate working

--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -15,14 +15,29 @@ s_MODEL_SELECT = Model selection
 
 # Help Dialog
 # GENERAL
-s_HELP_PARSING = 
+s_VAR_ORDER_HELP_PARSING = Variables order:
+S_HELP_PARSING = The parsing follows the order: 
 # PARSING
 
-s_EPIUPDATING_HELP_PARSING = TEST EPIUP
-s_PRIORITIES_HELP_PARSING = TEST PC
-s_INTEGRATION_HELP_PARSING = TEST IT
-s_PHENOTYPES_HELP_PARSING = TEST PHENO
-
+s_EPIUPDATING_HELP_PARSING =AS [FLOAT: ALPHA VALUE]
+s_PRIORITIES_HELP_PARSING = PC [MODEL NAME] [PRIORITIES CLASSES] <br><br> \
+							PRIORITIES CLASSES SEPARATORS: <br> VARS: "," , CLASS: ":" , UPDATER: "$"  <br> <br>\
+							UPDATERS:<br>  RN - Random non uniform, RU - Random uniform, S - Synchronous (default) <br><br> \
+							RN is followed by ALL the components rates in the MODEL order, e.g: <br> $RN[CR1[-],CR1[+],CR2[-],CR2[+],CR3[-],CR3[+]] <br> <br>\
+							Full example: <br> C1,C2[+],C3[-]$RN[1.0,1.0,null,3,5,null]:C2[-],C3[+]$RU
+						
+s_INTEGRATION_HELP_PARSING =  IT  [MODEL NAME] \
+								 [NODE NAME]  [NODE LEVEL]  [IT FUNCTION] <br><br> \
+								 IT FUNCTION: <br> CC = {signaling term, min #cell, max #cell} <br>\
+								 SIGNALING TERM: <br> component : level[min distance: max distance] <br><br> \
+								 EXAMPLE: ( {g1} & {g2 : 2, max = 4} ) | {g1 : 2[2 :], min = 4} <br> \
+								 MEANING: At-least-1 cell at distance 1 with g1 at minimum level 1 and atmost-4 <br> \
+								 cells at distance 1 with g2 at minimum level 2, or at-least-4 cells at distance at <br> \
+								 least 2 with g1 at minimum level 2.
+								 
+s_PHENOTYPES_HELP_PARSING =  [TAB IDENTIFIER ] [MODEL]  [PHENO NAME] \
+								[BOOLEAN: PHENO USAGE] <br> [PHENO COLOR RED#]  [PHENO COLOR GREEN#]  [PHENO COLOR BLUE#] \
+								<br>  [PHENOTYPE: ACCEPTS *(WILDCARD) OR INTEGER: VALID NODE LEVEL - NODES FOLLOW MODEL ORDER] 
 
 # File Menu
 s_MENU_FILE = File
