--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -153,6 +153,12 @@ s_ENUM_NODEPERCENT_Y = Yes
 s_ENUM_NODEPERCENT_N = No
 s_ENUM_NODEPERCENT_TITLE =  Component value over the grid (%)
 
+# org.epilogtool.gui.dialog.EnumStatePercent
+s_ENUM_STATEPERCENT_Y = Yes
+s_ENUM_STATEPERCENT_N = No
+s_ENUM_STATEPERCENT_TITLE =  State value over the grid (%)
+
+
 # org.epilogtool.gui.dialog.EnumOrderNodes
 s_ENUM_ORDERNODES_ORIG = SBML file
 s_ENUM_ORDERNODES_ALPHA = Alphabetical
