--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,21 @@
 			<artifactId>plexus-utils</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-
+		
+		<dependency>
+      		 <groupId>org.apache.poi</groupId>
+     		 <artifactId>poi</artifactId>
+      		 <version>3.12</version>
+    	</dependency>
+   	    <dependency>
+     		 <groupId>org.apache.poi</groupId>
+    	     <artifactId>poi-ooxml</artifactId>
+    	     <version>3.12</version>
+  	    </dependency>
   </dependencies>
-
 
 	<build>
 			<plugins>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
