--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -15,29 +15,10 @@ s_MODEL_SELECT = Model selection
 
 # Help Dialog
 # GENERAL
-s_VAR_ORDER_HELP_PARSING = Variables order:
-S_HELP_PARSING = The parsing follows the order: 
-# PARSING
-
-s_EPIUPDATING_HELP_PARSING =AS [FLOAT: ALPHA VALUE]
-s_PRIORITIES_HELP_PARSING = PC [MODEL NAME] [PRIORITIES CLASSES] <br><br> \
-							PRIORITIES CLASSES SEPARATORS: <br> VARS: "," , CLASS: ":" , UPDATER: "$"  <br> <br>\
-							UPDATERS:<br>  RN - Random non uniform, RU - Random uniform, S - Synchronous (default) <br><br> \
-							RN is followed by ALL the components rates in the MODEL order, e.g: <br> $RN[CR1[-],CR1[+],CR2[-],CR2[+],CR3[-],CR3[+]] <br> <br>\
-							Full example: <br> C1,C2[+],C3[-]$RN[1.0,1.0,null,3,5,null]:C2[-],C3[+]$RU
-						
-s_INTEGRATION_HELP_PARSING =  IT  [MODEL NAME] \
-								 [NODE NAME]  [NODE LEVEL]  [IT FUNCTION] <br><br> \
-								 IT FUNCTION: <br> CC = {signaling term, min #cell, max #cell} <br>\
-								 SIGNALING TERM: <br> component : level[min distance: max distance] <br><br> \
-								 EXAMPLE: ( {g1} & {g2 : 2, max = 4} ) | {g1 : 2[2 :], min = 4} <br> \
-								 MEANING: At-least-1 cell at distance 1 with g1 at minimum level 1 and atmost-4 <br> \
-								 cells at distance 1 with g2 at minimum level 2, or at-least-4 cells at distance at <br> \
-								 least 2 with g1 at minimum level 2.
-								 
-s_PHENOTYPES_HELP_PARSING =  [TAB IDENTIFIER ] [MODEL]  [PHENO NAME] \
-								[BOOLEAN: PHENO USAGE] <br> [PHENO COLOR RED#]  [PHENO COLOR GREEN#]  [PHENO COLOR BLUE#] \
-								<br>  [PHENOTYPE: ACCEPTS *(WILDCARD) OR INTEGER: VALID NODE LEVEL - NODES FOLLOW MODEL ORDER] 
+s_VAR_ORDER_HELP_PARSING = Variable order:
+s_VAR_INPUT_HELP_PARSING = Input vars:
+s_HELP_PARSING = Syntax: 
+s_HELP_DIA_TITLE = Model data and editing tips
 
 # File Menu
 s_MENU_FILE = File
@@ -156,7 +137,7 @@ s_ENUM_NODEPERCENT_TITLE =  Component value over the grid (%)
 # org.epilogtool.gui.dialog.EnumStatePercent
 s_ENUM_STATEPERCENT_Y = Yes
 s_ENUM_STATEPERCENT_N = No
-s_ENUM_STATEPERCENT_TITLE =  State value over the grid (%)
+s_ENUM_STATEPERCENT_TITLE =  Phenotype value over the grid (%)
 
 
 # org.epilogtool.gui.dialog.EnumOrderNodes
@@ -174,7 +155,7 @@ s_TAB_PERTURBATIONS = Perturbations
 s_TAB_PRIORITIES = Cellular model update
 s_TAB_EPIUPDATING = Epithelium model update
 s_TAB_CELLDIVISION = Cell division
-s_TAB_SELECTPHENOTYPE = Track phenotypes
+s_TAB_SELECTPHENOTYPE = Phenotype definitions
 s_TOOL_SIMULATION = Simulation
 s_TOOL_MONTECARLO = Monte carlo
 
@@ -224,5 +205,6 @@ s_TAB_SIM_CYCLE = Terminal cyclic attractor
 s_TAB_SIM_COMP_INTERNAL = Internal components
 s_TAB_SIM_COMP_INPUT = Input components
 s_TAB_SIM_COMP_BOTH = Internal/Input components
+s_TAB_SIM_SAVESTATE = Save the phenotypes % over the grid
 
 
