typos and tabs fixs

--- a/src/main/resources/org/epilogtool/txt.properties
+++ b/src/main/resources/org/epilogtool/txt.properties
@@ -16,7 +16,7 @@ s_MODEL_SELECT = Model selection
 # Help Dialog
 # GENERAL
 s_VAR_ORDER_HELP_PARSING = Variable order:
-s_VAR_INPUT_HELP_PARSING = Input vars:
+s_VAR_INPUT_HELP_PARSING = Input variables:
 s_HELP_PARSING = Syntax: 
 s_HELP_DIA_TITLE = Model data and editing tips
 
